# monokel

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  config_example.py  docker-compose-example.yml  docker-compose.template  init.py  main.py  pyproject.toml  requirements.txt
examples/: config_example.py  docker-compose-example.yml
src/: build.py
src/monokel/: build.py  cli.py  run.py
templates/: Dockerfile
